Alles neu-fixes

--- a/app/assets/stylesheets/_grid.scss
+++ b/app/assets/stylesheets/_grid.scss
@@ -16,7 +16,7 @@
   grid-area: header;
   background-color: var(--color-header-bg);
   color: var(--color-weiss);
-  padding: var(--spacing-lg) var(--content-padding);
+  padding: var(--spacing-sm) var(--content-padding);
 }
 
 /* Content */
