--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,6 @@
 <div class="header" data-controller="navigation">
   <div class="header-container">
-    <button id="btnConfetti" type="button" class="header-logo navbar-brand">Clownschule Confetti</button>
+    <button id="btnConfetti" type="button" class="header-logo">Clownschule Confetti</button>
 
     <button
       class="hamburger"
