--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -18,4 +18,8 @@ body {
   line-height: 1.6;
   color: var(--color-text);
   background-color: var(--color-body-bg);
+  img {
+    width: 100%;
+    height: auto;
+  }
 }
