--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -14,7 +14,7 @@ html {
 
 body {
   min-height: 100vh;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-family: 'Karla', sans-serif;
   line-height: 1.6;
   color: var(--color-text);
   background-color: var(--color-body-bg);
@@ -22,4 +22,36 @@ body {
     width: 100%;
     height: auto;
   }
+}
+
+@font-face {
+  font-family: 'MontserratAlternates';
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+  src: url('MontserratAlternates-SemiBold.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Karla', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+  src: url('Karla-VariableFont_wght.ttf') format('truetype');
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: hsl(60, 100%, 99%);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: hsl(43, 100%, 57%);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: hsl(36, 96%, 54%);
 }
