--- a/app/assets/stylesheets/_section.scss
+++ b/app/assets/stylesheets/_section.scss
@@ -13,9 +13,10 @@
   }
 
   &__header {
-    @include container(800px);
+    max-width: 800px;
+    margin: 0 auto var(--spacing-2xl);
+    padding: 0 var(--content-padding);
     text-align: center;
-    margin-bottom: var(--spacing-2xl);
   }
 
   &__title {
@@ -32,6 +33,8 @@
   }
 
   &__content {
-    @include container;
+    max-width: var(--content-max-width);
+    margin: 0 auto;
+    padding: 0 var(--content-padding);
   }
 }
