--- a/app/assets/stylesheets/_typo.scss
+++ b/app/assets/stylesheets/_typo.scss
@@ -49,9 +49,21 @@ span.regenbogen {
   border: none !important;
 }
 
+span.mark {
+  box-shadow: inset 0 -2.5rem 0 var(--color-primary-pale);
+  text-decoration: none;
+  font-weight: 500;
+  transition: box-shadow 0.25s ease;
+}
+
 @media (max-width: 768px) {
   h1 {
     font-size: calc(1.425rem + 2.1vw);
     line-height: calc(1.35rem + 0.9vw);
   }
+}
+
+hr.dotted {
+  border-top: 4px dotted var(--color-secondary);
+  margin: 0;
 }
