--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -25,6 +25,7 @@
   --color-overlay: rgba(0, 0, 0, 0.5);
   --color-nav-bg: hsl(0, 0%, 95%);
   --color-background-light: #f8f9fa;
+  --color-background-medium: #e1e1e1;
 
   /* Layout */
   --content-max-width: 70rem;
