--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,7 +9,7 @@
           <%= link_to 'Der Clown in Dir  🎉', root_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to 'KlinikClown', klinikclown_kurs_path, class: "nav-link" %>
+          <%= link_to 'Clownschule-Online', clownschule_online_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to 'Frage den Clown', frage_den_clown_path, class: "nav-link" %>
